// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component testing Modal with background 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm ZnMRp"
  >
    <div
      class="sc-AxirZ bRfJRy sc-AxiKw gVORbU"
    />
  </div>
</DocumentFragment>
`;

exports[`Modal component testing Modal without background 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm ZnMRp"
  />
</DocumentFragment>
`;
